cmake_minimum_required(VERSION 3.5)

set(ART_VERSION_MAJOR 0)
set(ART_VERSION_MINOR 1)
set(ART_VERSION_PATCH 0)
set(ART_VERSION ${ART_VERSION_MAJOR}.${ART_VERSION_MINOR}.${ART_VERSION_PATCH})

IF (WIN32)
    MESSAGE("Building windows version")
    ADD_DEFINITIONS(-DWIN32)
ELSEIF (APPLE)
    MESSAGE("Building apple version")
    ADD_DEFINITIONS(-DAPPLE)
ELSEIF (UNIX)
    MESSAGE("Building UNIX version.")
    ADD_DEFINITIONS(-DUNIX)
ELSE()
    MESSAGE("Building DEFAULT(UNIX) version.")
    ADD_DEFINITIONS(-DUNIX)
ENDIF ()

add_subdirectory(lib/gui)