ADD_SUBDIRECTORY(SmaliParse)
ADD_SUBDIRECTORY(utils)
#ADD_SUBDIRECTORY(SmaliAnalysis)
ADD_SUBDIRECTORY(AboutArt)
ADD_SUBDIRECTORY(OpenApk)
ADD_SUBDIRECTORY(ProjectTab)
ADD_SUBDIRECTORY(BookMark)
ADD_SUBDIRECTORY(EditorTab)
ADD_SUBDIRECTORY(Find)
ADD_SUBDIRECTORY(RunDevice)
ADD_SUBDIRECTORY(Debugger)
ADD_SUBDIRECTORY(Config)
ADD_SUBDIRECTORY(MainWindow)


