SET(TARGET_NAME Debugger)

aux_source_directory(jdwp JDWP_SRC)
FILE(GLOB_RECURSE ART_HEADER ${CMAKE_CURRENT_SOURCE_DIR}/*.c* ${ART_INCLUDE_DIR}/${TARGET_NAME}/*.h)

ADD_EXECUTABLE(Debugger_Test main.cpp ${ART_HEADER} ${JDWP_SRC})
TARGET_LINK_LIBRARIES(Debugger_Test ART_utils)

ADD_LIBRARY(Debugger ${ART_HEADER}  ${JDWP_SRC})
TARGET_LINK_LIBRARIES(Debugger ART_utils)
