SET(TARGET_NAME utils)

FILE(GLOB_RECURSE GUI_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/*.c* ${CMAKE_CURRENT_SOURCE_DIR}/*.h* ${GUI_INCLUDE_DIR}/${TARGET_NAME}/*.h)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
source_group_by_dir(GUI_SRCS)

add_library(${TARGET_NAME} STATIC ${GUI_SRCS})
qt5_use_modules(${TARGET_NAME} Widgets Xml)