SET(TARGET_NAME AboutArt)
SET(GUI_UIS AboutArt.ui)

get_property(ARTGUILIBS GLOBAL PROPERTY "ARTGUILIBS" )
SET(ARTGUILIBS ${ARTGUILIBS} ${TARGET_NAME})
set_property(GLOBAL PROPERTY ARTGUILIBS "${ARTGUILIBS}")

FILE(GLOB_RECURSE GUI_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/*.c* ${CMAKE_CURRENT_SOURCE_DIR}/*.h* ${GUI_INCLUDE_DIR}/${TARGET_NAME}/*.h)

QT5_WRAP_UI(GUI_UIS_H ${GUI_UIS})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
source_group_by_dir(GUI_SRCS)

add_library(${TARGET_NAME} STATIC ${GUI_SRCS} ${GUI_UIS_H})
target_link_libraries(${TARGET_NAME} utils)
qt5_use_modules(${TARGET_NAME} Widgets)